5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1578_2896.log
== TEST (2019-03-27 19:04:21) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: ")

# Impressao de saidas
print()
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:04:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
 var = input("Digite o nome: ")

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = input()
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:05:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
 var = input("Digite o nome: ")

# Impressao de saidas
print("var")
-- ERROR:
File "XXXX", line 4
    var = input()
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:05:51) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
 var = input("Digite o nome: ")

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = input()
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:06:27) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input ("Digite o nome: ")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:07:40) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input ("Digite o nome: ")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:07:45) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input ("Digite o nome: ")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.119943
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
